@@ -23,6 +23,7 @@ Mika Raento <mikie@iki.fi>
 Mike Crowe <mac@mcrowe.com>
 John Muth <muth@parascale.com>
 Geoffrey McRae <geoff@spacevs.com>
+Piotr Grzybowski <narsil.pl@gmail.com>
 
 Documentation contributions also came from:
 Marco Maggi <marco.maggi-ipsu@poste.it>
